--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "express": "latest",
+    "express-session": "latest",
+    "express-socket.io-session": "latest",
     "passport": "latest",
     "jquery": "latest",
     "mysql": "latest",
